# SwiftLink

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: endpoint.rs  lib.rs  peer.rs  prelude.rs
src-tauri/icons/: icon.icns
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/src/: log.rs  main.rs
src-tauri/src/action/: mod.rs
src-tauri/src/client/: discover.rs  mod.rs
src-tauri/src/core/: behaviour.rs  cbor_behaviour.rs  gossipsub_behaviour.rs  json_behaviour.rs  mdns_behaviour.rs  mod.rs
src-tauri/src/log/: mod.rs
src/lib/: Footer.svelte  Header.svelte  NavBar.svelte  NotificationsButton.svelte  SearchButton.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/about/: +page.svelte
src/routes/conf/: +page.svelte
src/routes/history/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/settings/: +page.svelte
static/: splashscreen.html
