[package]
name = "swiftlink"
version = "0.0.1"
description = "SwiftLink"
authors = ["Hari Babu Nalluri <harinvb@gmail.com>"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.18", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.53.1", features = [
    "yamux",
    "tokio",
    "serde",
    "tls",
    "dns",
    "mdns",
    "tcp",
    "request-response",
    "json",
    "macros",
] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
anyhow = "1.0.75"
thiserror = "1.0.50"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
