[package]
name = "swiftlink"
version = "0.0.1"
description = "SwiftLink"
authors = ["Hari Babu Nalluri <harinvb@gmail.com>"]
license = ""
repository = ""
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tauri = { version = "2.0.0-alpha.18", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.53.1", features = [
    "yamux",
    "tokio",
    "serde",
    "tls",
    "dns",
    "mdns",
    "tcp",
    "request-response",
    "json",
    "gossipsub",
    "macros",
] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.75"
thiserror = "1.0.50"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
